# to_do_web

./: Cargo.toml  diesel.toml  docker-compose.yaml
css/: base.css  main.css
javascript/: login.js  main.js
migrations/2024-09-15-141419_create_user/: up.sql
migrations/2024-11-18-064558_user_title_constraint/: up.sql
src/: database.rs  main.rs  process.rs  state.rs
src/auth/: jwt.rs  mod.rs  processes.rs
src/json_serialization/: to_do_item.rs  to_do_items.rs
src/model/item/: item.rs  new_item.rs
src/model/user/: new_user.rs  user.rs
src/models/item/: mod.rs  new_item.rs
src/models/user/: mod.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs  item.rs  mod.rs
src/views/: hello.rs  mod.rs  token.rs
src/views/app/: content_loader.rs  items.rs  login.rs  logout.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/views/users/: create.rs  mod.rs
templates/: login.j2  main.j2
templates/components/: header.html
