[package]
name = "to_do_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.15.1"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.12.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
