[package]
name = "to_do_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.15.1"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tempfile = "3.12.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
